finalizado de vddddddd

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
       background-color: #FFFBEA;
       text-align: center;
       
@@ -46,36 +46,36 @@
   </header>
 
   <section>
-    <div style="background-color: #570000; height: 60px;  ">
-      <h1 style="font-size: 24px; color: #FBDC6A; margin-top: 0;">Cadastrar medicamentos:</h1>
+    <div style="background-color: #570000; height: 60px; padding: 5px; display: flex; justify-content: center; align-items: center; ">
+      <h1 style="font-size: 25px; color: #FBDC6A; ">Cadastrar medicamentos:</h1>
     </div>
 
     <div>
-      <h3 style="color: #720C0C; ">Medicamento 1:</h3>
-      <input type="text" placeholder="Insira o nome" style="margin-bottom: 40px;"">
-      <input type="text" placeholder="Insira a frequência" ">
-      <small style="color: #720C0C; display: block; margin-bottom: 30px;">De quantas em quantas horas?</small>
+      <h3 style="color: #720C0C; margin-top: 25px;">Medicamento 1:</h3>
+      <input type="text" placeholder="Insira o nome" style="margin-bottom: 25px;">
+      <input type="text" placeholder="Insira a frequência">
+      <small style="color: #720C0C; display: block; margin-bottom: 28px; margin-top: 4px;">De quantas em quantas horas?</small>
       <input type="text" placeholder="Insira a quantidade">
-      <small style="color: #720C0C; display: block; margin-bottom: 30px;">Quantos medicamentos por vez?</small>
+      <small style="color: #720C0C; display: block; margin-bottom: 28px; margin-top: 4px">Quantos medicamentos por vez?</small>
       <button style="margin-bottom: 35px;" >Confirmar</button>
     </div>
     
     <hr style="margin-bottom: 35px;"">
 
     <div>
-      <h3 style="color: #720C0C;">Medicamento 2:</h3>
-      <input type="text" placeholder="Insira o nome" style="margin-bottom: 40px;"">
-      <input type="text" placeholder="Insira a frequência" ">
-      <small style="color: #720C0C; display: block; margin-bottom: 30px;">De quantas em quantas horas?</small>
+      <h3 style="color: #720C0C; margin-top: 25px;">Medicamento 2:</h3>
+      <input type="text" placeholder="Insira o nome" style="margin-bottom: 25px;">
+      <input type="text" placeholder="Insira a frequência">
+      <small style="color: #720C0C; display: block; margin-bottom: 28px; margin-top: 4px;">De quantas em quantas horas?</small>
       <input type="text" placeholder="Insira a quantidade">
-      <small style="color: #720C0C; display: block; margin-bottom: 30px;">Quantos medicamentos por vez?</small>
-      <button style="margin-bottom: 35px;"" >Confirmar</button>
+      <small style="color: #720C0C; display: block; margin-bottom: 28px; margin-top: 4px">Quantos medicamentos por vez?</small>
+      <button style="margin-bottom: 35px;" >Confirmar</button>
     </div>
   </section>
 
   <section>
-    <div style="background-color: #570000; height: 60px;">
-      <h2 style="font-size: 24px; color: #FBDC6A; margin-top: 0;">Medicamentos Cadastrados</h2>
+    <div style="background-color: #570000; height: 60px; display: flex; justify-content: center; align-items: center;">
+      <h2 style="font-size: 24px; color: #FBDC6A;">Medicamentos Cadastrados</h2>
     </div>
 
     <div>
@@ -100,7 +100,7 @@
       <h3 style="color: #720C0C; font-size: 30px;">Medicamento 2</h3>
 
       <small style="color: #720C0C; font-size: 18px;">Nome:</small>
-      <p style="color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;"><b>Dipirona</b></p>
+      <p style="font-size:20px; color:#FBDC6A; -webkit-text-stroke: 1px #720C0C;"><b>Dipirona</b></p>
 
       <small style="color: #720C0C; font-size: 18px;">Frequência:</small>
       <p style="color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;"><b>8 em 8 horas</b></p>
