--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>DoseDropApp</title>
+
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -11,11 +12,18 @@
       text-align: center;
       margin: 0;
     }
+
+    h1 {
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-weight: 100;
+    }
+
     hr {
       border-color: #720C0C;
       width: 350px;
       margin-bottom: 35px;
     }
+
     button {
       background-color: #720C0C;
       color: #FBDC6A;
@@ -28,8 +36,8 @@
       margin-bottom: 35px;
       cursor: pointer;
     }
-    input[type='text'],
-    input[type='time'] {
+
+    input {
       background-color: #D9D9D9;
       font-size: 20px;
       padding: 15px 30px;
@@ -40,6 +48,7 @@
       margin-bottom: 10px;
       box-sizing: border-box;
     }
+
     small {
       color: #720C0C;
       display: block;
@@ -47,42 +56,106 @@
       margin-bottom: 28px;
       margin-top: 4px;
     }
-    .section-header {
-      background-color: #570000;
-      height: 60px;
-      padding: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+
     p {
       font-size: 28px;
     }
-    .section-header h1, .section-header h2 {
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+
+    .popup {
+      background-color: #FFFBEA;
+      border-radius: 25px;
+      width: 400px;
+      max-width: 90%;
+      text-align: center;
+      overflow: hidden;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+      animation: fadeIn 0.3s ease;
+      position: relative;
+    }
+
+    .popup-header {
+      background-color: #720C0C;
       color: #FBDC6A;
-      margin: 0;
+      font-size: 24px;
+      font-weight: bold;
+      padding: 18px 24px;
+      border-top-left-radius: 25px;
+      border-top-right-radius: 25px;
+      position: relative;
+    }
+
+    .popup-content {
+      padding: 30px 35px;
+    }
+
+    .popup-content input {
+      background-color: #D9D9D9;
+      border: none;
+      border-radius: 30px;
+      padding: 16px;
+      width: 100%;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 30px;
+      color: #555;
+      box-sizing: border-box;
+    }
+
+    .popup-content button {
+      background-color: #720C0C;
+      color: #FBDC6A;
+      border: none;
+      border-radius: 30px;
+      padding: 15px 0;
+      font-size: 20px;
+      font-weight: bold;
+      width: 80%;
+      cursor: pointer;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0; transform: scale(0.9);}
+      to {opacity: 1; transform: scale(1);}
     }
   </style>
 </head>
+
 <body>
 
-<header style='background-color: #720C0C; padding: 20px; margin: 0;'>
-  <h1 style='color: #FBDC6A;'>DOSEDROP</h1>
+<header style='background-color: #720C0C; padding: 5px; margin: 0;'>
+  <h1 style='color: #FBDC6A; font-size: 35px;'>DoseDrop</h1>
+  <a href="codigo.html"></a>
 </header>
 
 <section>
   <div style='background-color: #570000; height: 60px; padding: 5px; display: flex; justify-content: center; align-items: center;'>
-    <h1 style='font-size: 25px; color: #FBDC6A;'>Cadastrar medicamentos:</h1>
+    <h1 style='font-size: 22px; color: #FBDC6A;'>Cadastrar medicamentos:</h1>
   </div>
+
   <div>
     <h3 style='color: #720C0C; margin-top: 25px;'>Medicamento 1:</h3>
     <input type='text' id='nome1' placeholder='Insira o nome'>
     <input type='time' id='frequencia1'>
     <small>De quantas em quantas horas?</small>
-    <input type='text' id='quantidade1' placeholder='Insira a quantidade'>
+    <input type='number' id='quantidade1' placeholder='Insira a quantidade'>
     <small>Quantos medicamentos por vez?</small>
-    <button id='botao1' onclick='atualizarMedicamento1()'>Confirmar</button>
+    <button onclick="abrirPopup(1)">Confirmar</button>
   </div>
+
   <hr>
 
   <div>
@@ -90,15 +163,15 @@
     <input type='text' id='nome2' placeholder='Insira o nome'>
     <input type='time' id='frequencia2'>
     <small>De quantas em quantas horas?</small>
-    <input type='text' id='quantidade2' placeholder='Insira a quantidade'>
+    <input type='number' id='quantidade2' placeholder='Insira a quantidade'>
     <small>Quantos medicamentos por vez?</small>
-    <button id='botao2' onclick='atualizarMedicamento2()'>Confirmar</button>
+    <button onclick="abrirPopup(2)">Confirmar</button>
   </div>
 </section>
 
 <section>
   <div style='background-color: #570000; height: 60px; display: flex; justify-content: center; align-items: center;'>
-    <h2 style='font-size: 24px; color: #FBDC6A;'>Medicamentos Cadastrados</h2>
+    <h2 style='font-size: 22px; color: #FBDC6A;'>Medicamentos Cadastrados</h2>
   </div>
 
   <div>
@@ -109,9 +182,8 @@
     <p id='med1-frequencia' style='color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;'><b>-</b></p>
     <small style='font-size: 20px;'>Quantidade:</small>
     <p id='med1-quantidade' style='color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;'><b>-</b></p>
-    <small style='font-size: 20px;'>Tempo restante:</small>
-    <p id='med1-tempo' style='color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;'><b>--:--</b></p>
   </div>
+
   <hr>
 
   <div>
@@ -122,17 +194,46 @@
     <p id='med2-frequencia' style='color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;'><b>-</b></p>
     <small style='font-size: 20px;'>Quantidade:</small>
     <p id='med2-quantidade' style='color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;'><b>-</b></p>
-    <small style='font-size: 20px;'>Tempo restante:</small>
-    <p id='med2-tempo' style='color: #FBDC6A; -webkit-text-stroke: 1px #720C0C;'><b>--:--</b></p>
   </div>
 </section>
 
+
+<div class="overlay" id="popupOverlay">
+  <div class="popup">
+    <div class="popup-header">
+      <span>Cadeado digital</span>
+
+    </div>
+    <div class="popup-content">
+      <input type="password" id="senhaPopup" placeholder="Insira o código">
+      <button onclick="confirmarPopup()">Confirmar</button>
+    </div>
+  </div>
+</div>
+
 <script>
+  let medicamentoSelecionado = null;
+
+  function abrirPopup(num) {
+    medicamentoSelecionado = num;
+    document.getElementById("popupOverlay").style.display = "flex";
+  }
+
+  function fecharPopup() {
+    document.getElementById("popupOverlay").style.display = "none";
+    document.getElementById("senhaPopup").value = "";
+  }
+
+  function confirmarPopup() {
+    if (medicamentoSelecionado === 1) atualizarMedicamento1();
+    if (medicamentoSelecionado === 2) atualizarMedicamento2();
+    fecharPopup();
+  }
+
   function atualizarMedicamento1() {
     const nome = document.getElementById('nome1').value || '-';
     const frequencia = document.getElementById('frequencia1').value || '-';
     const quantidade = document.getElementById('quantidade1').value || '-';
-
     document.getElementById('med1-nome').innerHTML = `<b>${nome}</b>`;
     document.getElementById('med1-frequencia').innerHTML = `<b>${frequencia}</b>`;
     document.getElementById('med1-quantidade').innerHTML = `<b>${quantidade}</b>`;
@@ -142,43 +243,10 @@
     const nome = document.getElementById('nome2').value || '-';
     const frequencia = document.getElementById('frequencia2').value || '-';
     const quantidade = document.getElementById('quantidade2').value || '-';
-
     document.getElementById('med2-nome').innerHTML = `<b>${nome}</b>`;
     document.getElementById('med2-frequencia').innerHTML = `<b>${frequencia}</b>`;
     document.getElementById('med2-quantidade').innerHTML = `<b>${quantidade}</b>`;
   }
-</script>
-
-<script>
-  let Socket;
-  let botao1 = document.getElementById('botao1');
-  let botao2 = document.getElementById('botao2');
-
-  botao1.addEventListener('click', sendMessage1);
-  botao2.addEventListener('click', sendMessage2);
-
-  function init() {
-    Socket = new WebSocket(`ws://${window.location.hostname}:81`);
-    Socket.onmessage = (message) => {
-      processMessage(message);
-    };
-  }
-
-  function sendMessage1() {
-    const freq = document.getElementById('frequencia1').value || '-';
-    Socket.send(`Frequencia1: ${freq}`);
-  }
-
-  function sendMessage2() {
-    const freq = document.getElementById('frequencia2').value || '-';
-    Socket.send(`Frequencia2: ${freq}`);
-  }
-
-  function processMessage(message) {
-    document.querySelector('#informacao').innerHTML = message.data;
-  }
-
-  window.onload = init;
 </script>
 
 </body>
